chrome-extension/panel/src/styles.css
body {
  margin: 0;
  max-height: 100vh;
  overflow-y: hidden;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

header {
  border-bottom: 1px solid #8888887a;
  height: 25px;
  display: flex;
  font-size: 12px;
  align-items: center;
}

header .buttons {
  border-right: 1px solid #8888887a;
  padding: 0 5px;
  margin-right: 5px;
}

header select {
  background-color: transparent;
}

header b {
  padding: 0 5px;
}

header select {
  border: none;
}

main {
  display: flex;
}

main .sidebar {
  overflow-y: auto;
  max-height: calc(100vh - 25px);
}

main .sidebar > div {
  font-size: 12px;
  padding: 10px 20px 10px 10px;
  border-right: 1px solid #f9f9ef;
  cursor: pointer;
}

main .code {
  width: 100%;
  font-size: 12px;
}

.save-modification {
  display: flex;
  height: 30px;
  align-items: center;
  justify-content: flex-end;
  gap: 5px;
  padding: 0 10px;
}

.transparent-button {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.devtools.message {
  margin: 20px;
  text-align: center;
}

.ant-message {
  bottom: 20px;
  top: initial;
}

@media (prefers-color-scheme: dark) {
  body {
    color: #dbdbdb;
    background-color: #292a2d;
  }

  header button {
    color: #919191;
  }

  header button:hover {
    color: #dbdbdb;
  }

  header {
    background-color: #292a2d;
  }

  header select {
    color: #dbdbdb;
  }

  main .sidebar > div {
    border-right: 1px solid #333;
    color: #919191;
  }
  
  main .sidebar > div:hover:not(.active) {
    background-color: #202020;
    color: #dbdbdb;
  }
  
  main .sidebar .active {
    color: #dbdbdb;
    background-color: #111;
  }

  .save-modification button {
    color: #919191;
    background-color: #3e3c3c;
  }

  .save-modification button:hover {
    color: #dbdbdb;
  }

  .transparent-button.active {
    color: #8ab4f8;
  }
}

@media (prefers-color-scheme: light) {
  header, .save-modification {
    background-color: #f1f3f4;
  }

  .save-modification {
    border-top: 1px solid #8888887a;
  }

  header button {
    color: #6e6e6e;
  }

  header button:hover {
    color: #202124;
  }

  main .sidebar > div {
    border-right: 1px solid #f9f9ef;
  }
  
  main .sidebar > div:hover:not(.active) {
    background-color: #f9f9ef;
  }
  
  main .sidebar .active {
    background-color: #f9f9f9;
  }

  .save-modification button {
    color: #080808c7;
    border: 1px solid #d8d8d8;
  }

  .save-modification button:hover {
    color: #202124;
  }

  .transparent-button.active {
    color: #1b73e8;
  }
}

